--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,18 @@
 
 body {
 
-	/*font-family: "Georgia","Helvetica", Times, serif;*/
 	font-family: 'Fresca', sans-serif;
-	/*background-image: url(../images/background.jpg);*/
-
+	background-image: url(../images/background2.jpg);
+	background-size: 100%;
 }
 
 #title-box {
 
 	background: #dc7f0a;     /* Darker Orange */
-	color: #ffffff;          /* White */
-	font-size: 30px;
+	color: #6017af;          /* Purple */
+	font-size: 24px;
 	font-weight: 2;
-	margin: 40px 0px 10px 0px;
-	/*width: 50%;*/
+	margin: 20px 0px 10px 0px;
 	padding: 20px;
 	text-align: center;
 }
@@ -28,70 +26,43 @@ body {
 	background: #f5ec79;     /* Light Yellow */
 	color: #1b9a05;          /* Green */
 	font-size: 18px;
-	line-height: 100%;
+	line-height: 80%;
 	margin: 10px 0px 10px 0px;
-	/*width: 50%;*/
 	padding: 20px;
 	text-align: left;
 }
 
-#goal-note-box , #user-note-box {
+#start-button {
+	float: auto;
+}
+
+#goal-note-box, #user-note-box {
 
 	background: #0aafcc;
-	margin: 10px 0px 10px 0px;
+	margin: 10px 20px 10px 0px;
 	font-size: 24px;
 	line-height: 100%;
 	height: 40px;
-	/*width: 50%;*/
 	padding-left: 5px;
 	padding-top: 5px;
 	text-align: left;
 }
 
-#user-note-box {
-
-/*	background: #0aafcc;
-	margin: 10px 40px 10px 10px;
-	font-size: 24px;
-	line-height: 100%;
-	height: 20px;
-	width: 50%;
-	padding: 20px;
-	text-align: left;*/
-}
-
 #goal-score-box, #user-score-box {
 
 	background: #0aafcc;
-	margin: 10px 0px 10px 0px;
-	font-size: 30px;
+	margin: 10px 20px 10px 0px;
+	font-size: 50px;
 	line-height: 100%;
-	height: 40px;
-	/*width: 50%;*/
-	padding-left: 10px;
-	padding-top: 5px;
+	height: 100px;
+	padding-left: 20px;
+	padding-top: 20px;
 
 	text-align: left;
-}
-
-#user-score-box {
-
-/*	background: #0aafcc;
-	margin: 10px 40px 10px 10px;
-	font-size: 36px;
-	line-height: 100%;
-	height: 40px;
-	width: 50%;
-	padding: 20px;
-	text-align: left;*/
 }
 
 #crystal-buttons {
-
-	margin: 10px 0px 40px 0px;
-	padding: 10px 20px 10px 20px;
-	text-align: left;
-
+	float: left;
 }
 
 #win-loss-box {
@@ -100,7 +71,7 @@ body {
 	color: #333333;          /* Green */
 	font-size: 24px;
 	line-height: 100%;
-	margin: 10px 0px 40px 0px;
+	margin: 10px 0px 20px 0px;
 	padding: 10px 20px 10px 20px;
 	text-align: left;
 } 
